// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataops-stepfunction Snapshot Tests StepFunction App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-stepfunction-main": {
    "Description": "(SO0320-dataops-stepfunction) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-main:loggroup:samplestatemachinestandard:name",
        },
        "Value": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-main-sample-state-machine-standard",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-main:queue:samplestatemachinestandardeventsdlq:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-main:queue:samplestatemachinestandardeventsdlq:name",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "QueueName",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-main:queue:samplestatemachinestandardeventsdlq:url",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValueorgdomain1glueprojectcrawlernamerawsourcefilescrawlerC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/org/domain1/glue-project/crawler/name/raw-source-files-crawler",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValueorgdomainglueprojectcrawlernamerawsourcefilescrawlerC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/org/domain/glue-project/crawler/name/raw-source-files-crawler",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-stepfunction-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-stepfunction) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
              {
                "id": "HIPAA.Security-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
              {
                "id": "PCI.DSS.321-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
              {
                "id": "NIST.800.53.R5",
                "reason": "[CONFIG:sample_configs/sample-config-comprehensive.yaml] Cloudwatch Log Group retention period is managed by AWS Secure Environment Accelerator",
              },
            ],
          },
        },
        "Properties": {
          "KmsKeyId": "arn:test-partition:kms:test-region:test-acct:key/test-key-id",
          "LogGroupName": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-main-sample-state-machine-standard",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::Logs::LogGroup",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-main/loggroup/sample-state-machine-standard/name",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-main-sample-state-machine-standard",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-sample/stepfunction/name/sample-state-machine-standard",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Name",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Delete",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "KmsMasterKeyId": "arn:test-partition:kms:test-region:test-acct:key/test-key-id",
          "QueueName": "test-org-test-env-test-domain-test-stepfunction-main-sample-state-machi--abaf4ff",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::SQS::Queue",
        "UpdateReplacePolicy": "Delete",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "PolicyDocument": {
            "Statement": [
              {
                "Action": "sqs:*",
                "Condition": {
                  "Bool": {
                    "aws:SecureTransport": "false",
                  },
                },
                "Effect": "Deny",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": "*",
                "Sid": "EnforceSSL",
              },
              {
                "Action": "sqs:SendMessage",
                "Condition": {
                  "ArnEquals": {
                    "aws:SourceArn": {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "events.amazonaws.com",
                },
                "Resource": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "Sid": "REPLACED-CFN-LOGICAL-ID",
              },
              {
                "Action": "sqs:SendMessage",
                "Condition": {
                  "ArnEquals": {
                    "aws:SourceArn": {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "events.amazonaws.com",
                },
                "Resource": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "Sid": "REPLACED-CFN-LOGICAL-ID",
              },
              {
                "Action": "sqs:SendMessage",
                "Condition": {
                  "ArnEquals": {
                    "aws:SourceArn": {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "events.amazonaws.com",
                },
                "Resource": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "Sid": "REPLACED-CFN-LOGICAL-ID",
              },
            ],
            "Version": "2012-10-17",
          },
          "Queues": [
            {
              "Ref": "REPLACED-CFN-LOGICAL-ID",
            },
          ],
        },
        "Type": "AWS::SQS::QueuePolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-main/queue/sample-state-machine-standard-events-dlq/arn",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-main/queue/sample-state-machine-standard-events-dlq/name",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "QueueName",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-main/queue/sample-state-machine-standard-events-dlq/url",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "testing event pattern rule",
          "EventBusName": "some-custom-name",
          "EventPattern": {
            "account": [
              {
                "Ref": "AWS::AccountId",
              },
            ],
            "detail": {
              "some_event_key": "some_event_value",
            },
            "detail-type": [
              "Glue Job State Change",
            ],
            "id": [
              "example-event-id",
            ],
            "region": [
              {
                "Ref": "AWS::Region",
              },
            ],
            "resources": [
              {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":glue:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":job/my-job",
                  ],
                ],
              },
            ],
            "source": [
              "glue.amazonaws.com",
            ],
            "time": [
              "REPLACED-TIMESTAMP",
            ],
            "version": [
              "0",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-stepfunction-main-t--6f7329e6",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "REPLACED-CFN-LOGICAL-ID",
              },
              "DeadLetterConfig": {
                "Arn": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
              },
              "Id": "Target0",
              "RetryPolicy": {
                "MaximumEventAgeInSeconds": 3600,
                "MaximumRetryAttempts": 10,
              },
              "RoleArn": {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Event Rule for triggering sample-state-machine-standard-testing-event-bridge-s3 with S3 events",
          "EventBusName": "some-custom-name",
          "EventPattern": {
            "detail": {
              "bucket": {
                "name": [
                  "sample-org-dev-instance1-datalake-raw",
                ],
              },
              "object": {
                "key": [
                  {
                    "prefix": "data/test-lambda/",
                  },
                ],
              },
            },
            "detail-type": [
              "Object Created",
            ],
            "source": [
              "aws.s3",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-stepfunction-main-te-7547f2b3",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "REPLACED-CFN-LOGICAL-ID",
              },
              "DeadLetterConfig": {
                "Arn": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
              },
              "Id": "Target0",
              "RetryPolicy": {
                "MaximumEventAgeInSeconds": 3600,
                "MaximumRetryAttempts": 10,
              },
              "RoleArn": {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "testing schedule rule",
          "Name": "test-org-test-env-test-domain-test-stepfunction-main-te-67677cea",
          "ScheduleExpression": "cron(0 20 * * ? *)",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "REPLACED-CFN-LOGICAL-ID",
              },
              "DeadLetterConfig": {
                "Arn": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
              },
              "Id": "Target0",
              "Input": "{"some-test-input-obj":{"some-test-input-key":"test-value"}}",
              "RetryPolicy": {
                "MaximumEventAgeInSeconds": 3600,
                "MaximumRetryAttempts": 10,
              },
              "RoleArn": {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Delete",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "DefinitionString": {
            "Fn::Join": [
              "",
              [
                "{"Comment":"A description of my state machine","StartAt":"StartCrawler-Domain1","States":{"StartCrawler-Domain1":{"Type":"Task","Next":"WaitForDomain1Crawler","Parameters":{"Name":"",
                {
                  "Ref": "SsmParameterValueorgdomainglueprojectcrawlernamerawsourcefilescrawlerC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                ""},"Resource":"arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":states:::aws-sdk:glue:startCrawler"},"WaitForDomain1Crawler":{"Type":"Wait","Seconds":5,"Next":"GetCrawlerStatus-Domain1"},"GetCrawlerStatus-Domain1":{"Type":"Task","Next":"CheckStatus-Domain1Crawler","Parameters":{"Name":"",
                {
                  "Ref": "SsmParameterValueorgdomain1glueprojectcrawlernamerawsourcefilescrawlerC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                ""},"Resource":"arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":states:::aws-sdk:glue:getCrawler"},"CheckStatus-Domain1Crawler":{"Type":"Choice","Choices":[{"Or":[{"Variable":"$.Crawler.State","StringEquals":"RUNNING"},{"Variable":"$.Crawler.State","StringEquals":"STOPPING"}],"Next":"WaitForDomain1Crawler"},{"Or":[{"Variable":"$.Crawler.State","StringEquals":"FAILED"},{"Variable":"$.Crawler.State","StringEquals":"STOPPED"}],"Next":"Fail-Domain1Crawler"}],"Default":"Success"},"Success":{"Type":"Pass","End":true},"Fail-Domain1Crawler":{"Type":"Fail","Cause":"GlueCrawlerError - Glue Crawler Failed"}}}",
              ],
            ],
          },
          "LoggingConfiguration": {
            "Destinations": [
              {
                "CloudWatchLogsLogGroup": {
                  "LogGroupArn": {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                },
              },
            ],
            "IncludeExecutionData": false,
            "Level": "ALL",
          },
          "RoleArn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::",
                {
                  "Ref": "AWS::AccountId",
                },
                ":role/service-role/StepFunctions-standard-role",
              ],
            ],
          },
          "StateMachineName": "test-org-test-env-test-domain-test-stepfunction-main-sample-state-mach--2889237f",
          "StateMachineType": "STANDARD",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "TracingConfiguration": {
            "Enabled": true,
          },
        },
        "Type": "AWS::StepFunctions::StateMachine",
        "UpdateReplacePolicy": "Delete",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "AssumeRolePolicyDocument": {
            "Statement": [
              {
                "Action": "sts:AssumeRole",
                "Effect": "Allow",
                "Principal": {
                  "Service": "events.amazonaws.com",
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::IAM::Role",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "PolicyDocument": {
            "Statement": [
              {
                "Action": "states:StartExecution",
                "Effect": "Allow",
                "Resource": {
                  "Ref": "REPLACED-CFN-LOGICAL-ID",
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "PolicyName": "REPLACED-CFN-LOGICAL-ID",
          "Roles": [
            {
              "Ref": "REPLACED-CFN-LOGICAL-ID",
            },
          ],
        },
        "Type": "AWS::IAM::Policy",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-stepfunction Snapshot Tests StepFunction App Express App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-stepfunction-express": {
    "Description": "(SO0320-dataops-stepfunction) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-express:loggroup:sampleexpressmachine:name",
        },
        "Value": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-express-sample-express-machine",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampledeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/deploymentRole/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/kmsArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/projectBucket/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/projectTopicArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsamplesecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/securityConfiguration/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-stepfunction-express/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-express",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-stepfunction) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Properties": {
          "KmsKeyId": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "LogGroupName": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-express-sample-express-machine",
          "RetentionInDays": 30,
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-express",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::Logs::LogGroup",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-express/loggroup/sample-express-machine/name",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-express",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-express-sample-express-machine",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-sample/stepfunction/name/sample-express-machine",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-express",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Name",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "DefinitionString": "{"Comment":"Express state machine for high-volume processing","StartAt":"ProcessEvent","States":{"ProcessEvent":{"Type":"Pass","End":true}}}",
          "LoggingConfiguration": {
            "Destinations": [
              {
                "CloudWatchLogsLogGroup": {
                  "LogGroupArn": {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                },
              },
            ],
            "IncludeExecutionData": true,
            "Level": "ALL",
          },
          "RoleArn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::",
                {
                  "Ref": "AWS::AccountId",
                },
                ":role/service-role/StepFunctions-express-role",
              ],
            ],
          },
          "StateMachineName": "test-org-test-env-test-domain-test-stepfunction-express-sample-express-machine",
          "StateMachineType": "EXPRESS",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-express",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "TracingConfiguration": {
            "Enabled": true,
          },
        },
        "Type": "AWS::StepFunctions::StateMachine",
        "UpdateReplacePolicy": "Delete",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-stepfunction Snapshot Tests StepFunction App Minimal App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-stepfunction-minimal": {
    "Description": "(SO0320-dataops-stepfunction) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-minimal:loggroup:mystatemachine:name",
        },
        "Value": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-minimal-my-state-machine",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampledeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/deploymentRole/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/kmsArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/projectBucket/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/projectTopicArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsamplesecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/securityConfiguration/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-stepfunction-minimal/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-stepfunction) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Properties": {
          "KmsKeyId": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "LogGroupName": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-minimal-my-state-machine",
          "RetentionInDays": 731,
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-minimal",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::Logs::LogGroup",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-minimal/loggroup/my-state-machine/name",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-minimal-my-state-machine",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-sample/stepfunction/name/my-state-machine",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Name",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "DefinitionString": "{"Comment":"Minimal state machine","StartAt":"PassState","States":{"PassState":{"Type":"Pass","End":true}}}",
          "LoggingConfiguration": {
            "Destinations": [
              {
                "CloudWatchLogsLogGroup": {
                  "LogGroupArn": {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                },
              },
            ],
            "IncludeExecutionData": false,
            "Level": "ALL",
          },
          "RoleArn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::",
                {
                  "Ref": "AWS::AccountId",
                },
                ":role/service-role/StepFunctions-role",
              ],
            ],
          },
          "StateMachineName": "test-org-test-env-test-domain-test-stepfunction-minimal-my-state-machine",
          "StateMachineType": "STANDARD",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-minimal",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "TracingConfiguration": {
            "Enabled": true,
          },
        },
        "Type": "AWS::StepFunctions::StateMachine",
        "UpdateReplacePolicy": "Delete",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-stepfunction Snapshot Tests StepFunction App Noproject App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-stepfunction-noproject": {
    "Description": "(SO0320-dataops-stepfunction) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-noproject:loggroup:samplestatemachine1:name",
        },
        "Value": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-noproject-sample-state-machine-1",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-noproject:queue:samplestatemachine1eventsdlq:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-noproject:queue:samplestatemachine1eventsdlq:name",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "QueueName",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-stepfunction-noproject:queue:samplestatemachine1eventsdlq:url",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValueorgdomain1glueprojectcrawlernamerawsourcefilescrawlerC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/org/domain1/glue-project/crawler/name/raw-source-files-crawler",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValueorgdomainglueprojectcrawlernamerawsourcefilescrawlerC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/org/domain/glue-project/crawler/name/raw-source-files-crawler",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-stepfunction-noproject/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-stepfunction) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
              {
                "id": "HIPAA.Security-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
              {
                "id": "PCI.DSS.321-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
              {
                "id": "NIST.800.53.R5",
                "reason": "[CONFIG:sample_configs/sample-config-noproject.yaml] Cloudwatch Log Group retention period is managed by AWS Secure Environment Accelerator",
              },
            ],
          },
        },
        "Properties": {
          "KmsKeyId": "arn:test-partition:kms:test-region:test-acct:key/test-key-id",
          "LogGroupName": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-noproject-sample-state-machine-1",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::Logs::LogGroup",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-noproject/loggroup/sample-state-machine-1/name",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "/aws/stepfunction/test-org-test-env-test-domain-test-stepfunction-noproject-sample-state-machine-1",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Delete",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "KmsMasterKeyId": "arn:test-partition:kms:test-region:test-acct:key/test-key-id",
          "QueueName": "test-org-test-env-test-domain-test-stepfunction-noproject-sample-state--1dd9530e",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::SQS::Queue",
        "UpdateReplacePolicy": "Delete",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "PolicyDocument": {
            "Statement": [
              {
                "Action": "sqs:*",
                "Condition": {
                  "Bool": {
                    "aws:SecureTransport": "false",
                  },
                },
                "Effect": "Deny",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": "*",
                "Sid": "EnforceSSL",
              },
              {
                "Action": "sqs:SendMessage",
                "Condition": {
                  "ArnEquals": {
                    "aws:SourceArn": {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "events.amazonaws.com",
                },
                "Resource": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "Sid": "REPLACED-CFN-LOGICAL-ID",
              },
              {
                "Action": "sqs:SendMessage",
                "Condition": {
                  "ArnEquals": {
                    "aws:SourceArn": {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "events.amazonaws.com",
                },
                "Resource": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "Sid": "REPLACED-CFN-LOGICAL-ID",
              },
              {
                "Action": "sqs:SendMessage",
                "Condition": {
                  "ArnEquals": {
                    "aws:SourceArn": {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "events.amazonaws.com",
                },
                "Resource": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "Sid": "REPLACED-CFN-LOGICAL-ID",
              },
            ],
            "Version": "2012-10-17",
          },
          "Queues": [
            {
              "Ref": "REPLACED-CFN-LOGICAL-ID",
            },
          ],
        },
        "Type": "AWS::SQS::QueuePolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-noproject/queue/sample-state-machine-1-events-dlq/arn",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-noproject/queue/sample-state-machine-1-events-dlq/name",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "QueueName",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-SQS3",
                "reason": "[MDAA:@aws-mdaa/sqs-constructs/lib/index.ts:LINE:COL] Queue is a DLQ.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-stepfunction-noproject/queue/sample-state-machine-1-events-dlq/url",
          "Tags": {
            "mdaa_cdk_app": "dataops-stepfunction",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-stepfunction-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "testing",
          "EventBusName": "some-custom-name",
          "EventPattern": {
            "detail": {
              "some_event_key": "some_event_value",
            },
            "source": [
              "glue.amazonaws.com",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-stepfunction-noproj--4993c87f",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "REPLACED-CFN-LOGICAL-ID",
              },
              "DeadLetterConfig": {
                "Arn": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
              },
              "Id": "Target0",
              "RetryPolicy": {
                "MaximumEventAgeInSeconds": 3600,
                "MaximumRetryAttempts": 10,
              },
              "RoleArn": {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Event Rule for triggering sample-state-machine-1-testing-event-bridge-s3 with S3 events",
          "EventBusName": "some-custom-name",
          "EventPattern": {
            "detail": {
              "bucket": {
                "name": [
                  "sample-org-dev-instance1-datalake-raw",
                ],
              },
              "object": {
                "key": [
                  {
                    "prefix": "data/test-lambda/",
                  },
                ],
              },
            },
            "detail-type": [
              "Object Created",
            ],
            "source": [
              "aws.s3",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-stepfunction-noproj--44b03c14",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "REPLACED-CFN-LOGICAL-ID",
              },
              "DeadLetterConfig": {
                "Arn": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
              },
              "Id": "Target0",
              "RetryPolicy": {
                "MaximumEventAgeInSeconds": 3600,
                "MaximumRetryAttempts": 10,
              },
              "RoleArn": {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "testing",
          "Name": "test-org-test-env-test-domain-test-stepfunction-noproj--762e409d",
          "ScheduleExpression": "cron(0 20 * * ? *)",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "REPLACED-CFN-LOGICAL-ID",
              },
              "DeadLetterConfig": {
                "Arn": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
              },
              "Id": "Target0",
              "Input": "{"some-test-input-obj":{"some-test-input-key":"test-value"}}",
              "RetryPolicy": {
                "MaximumEventAgeInSeconds": 3600,
                "MaximumRetryAttempts": 10,
              },
              "RoleArn": {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Delete",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "DefinitionString": {
            "Fn::Join": [
              "",
              [
                "{"Comment":"A description of my state machine","StartAt":"StartCrawler-Domain1","States":{"StartCrawler-Domain1":{"Type":"Task","Next":"WaitForDomain1Crawler","Parameters":{"Name":"",
                {
                  "Ref": "SsmParameterValueorgdomainglueprojectcrawlernamerawsourcefilescrawlerC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                ""},"Resource":"arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":states:::aws-sdk:glue:startCrawler"},"WaitForDomain1Crawler":{"Type":"Wait","Seconds":5,"Next":"GetCrawlerStatus-Domain1"},"GetCrawlerStatus-Domain1":{"Type":"Task","Next":"CheckStatus-Domain1Crawler","Parameters":{"Name":"",
                {
                  "Ref": "SsmParameterValueorgdomain1glueprojectcrawlernamerawsourcefilescrawlerC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                ""},"Resource":"arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":states:::aws-sdk:glue:getCrawler"},"CheckStatus-Domain1Crawler":{"Type":"Choice","Choices":[{"Or":[{"Variable":"$.Crawler.State","StringEquals":"RUNNING"},{"Variable":"$.Crawler.State","StringEquals":"STOPPING"}],"Next":"WaitForDomain1Crawler"},{"Or":[{"Variable":"$.Crawler.State","StringEquals":"FAILED"},{"Variable":"$.Crawler.State","StringEquals":"STOPPED"}],"Next":"Fail-Domain1Crawler"}],"Default":"Success"},"Success":{"Type":"Pass","End":true},"Fail-Domain1Crawler":{"Type":"Fail","Cause":"GlueCrawlerError - Glue Crawler Failed"}}}",
              ],
            ],
          },
          "LoggingConfiguration": {
            "Destinations": [
              {
                "CloudWatchLogsLogGroup": {
                  "LogGroupArn": {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                },
              },
            ],
            "IncludeExecutionData": false,
            "Level": "ALL",
          },
          "RoleArn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::",
                {
                  "Ref": "AWS::AccountId",
                },
                ":role/service-role/StepFunctions-explore-Table1sInfo-ETL-role-4c710b67",
              ],
            ],
          },
          "StateMachineName": "test-org-test-env-test-domain-test-stepfunction-noproject-sample-state-m-e1f1a94",
          "StateMachineType": "STANDARD",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "TracingConfiguration": {
            "Enabled": true,
          },
        },
        "Type": "AWS::StepFunctions::StateMachine",
        "UpdateReplacePolicy": "Delete",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "PolicyDocument": {
            "Statement": [
              {
                "Action": "states:StartExecution",
                "Effect": "Allow",
                "Resource": {
                  "Ref": "REPLACED-CFN-LOGICAL-ID",
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "PolicyName": "REPLACED-CFN-LOGICAL-ID",
          "Roles": [
            {
              "Ref": "REPLACED-CFN-LOGICAL-ID",
            },
          ],
        },
        "Type": "AWS::IAM::Policy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/dataops/dataops-stepfunction-l3-construct/lib/dataops-stepfunction-l3-construct.ts:LINE:COL] Role is specific to invocation of this step function. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "AssumeRolePolicyDocument": {
            "Statement": [
              {
                "Action": "sts:AssumeRole",
                "Effect": "Allow",
                "Principal": {
                  "Service": "events.amazonaws.com",
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-stepfunction",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-stepfunction-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::IAM::Role",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;
